--- a/java/app/src/main/res/menu/menu_note_list.xml
+++ b/java/app/src/main/res/menu/menu_note_list.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ie.rmxsantiago.notetaking.NoteListActivity">
+    tools:context="ie.rmxsantiago.notetaking.notelist.NoteListActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_email"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_email"
         app:showAsAction="never" />
 </menu>
